kubernetes/apps/networking/external-services/nas01.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app nas01
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http-syno
      port: &port 5000
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas01
  namespace: networking
subsets:
  - addresses:
      - ip: 10.10.10.20
    ports:
      - name: http-syno
        port: 5000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app nas01
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
    hajimari.io/group: "storage"
spec:
  ingressClassName: "internal"
  rules:
    - host: &host "nas01.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 5000
  tls:
    - hosts:
        - *host
      secretName: nas01-tls
