kubernetes/apps/networking/external-services/pbs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pbs
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https-pbs
      port: &port 8007
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pbs
  namespace: networking
subsets:
  - addresses:
      - ip: 10.10.10.23
    ports:
      - name: https-pbs
        port: 8007
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app pbs
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    hajimari.io/enable: "true"
    hajimari.io/icon: "backup-restore"
    hajimari.io/group: "storage"
spec:
  ingressClassName: "internal"
  rules:
    - host: &host "pbs.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  name: "https-pbs"
  tls:
    - hosts:
        - *host
      secretName: pbs-tls
