kubernetes/apps/networking/external-services/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: networking
subsets:
  - addresses:
      - ip: 10.10.0.1
    ports:
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app unifi
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    hajimari.io/enable: "true"
    hajimari.io/icon: "wifi"
    hajimari.io/group: "networking"
spec:
  ingressClassName: "internal"
  rules:
    - host: &host "unifi.${SECRET_PUBLIC_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: unifi-tls
